# etrobocon2025-comm-device-system

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: format-check.yaml  test.yaml
scripts/: kill_official_server.sh  run_official_server.sh
src/: __init__.py  __main__.py  official_interface.py  sample.py
src/server/: FastAPI_server.py  __init__.py  fastapi_server.py
tests/: __init__.py  test_FastAPI_server.py  test_fastapi_server.py  test_sample.py
